Clang: Avoid parsing unknown __builtin_va_arg_pack

Task-number: QTCREATORBUG-17185
Change-Id: I72552bcd417c9760413b772593642e3c79f1ab17
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>